<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavros_testing</name>
  <version>0.0.1</version>
  <description>Testing package for MAVROS</description>
  <maintainer email="hfcaio@gmail.com">hfcaio</maintainer>
  <license>GLPv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
